more stuff added, projects need to be updated

--- a/about.html
+++ b/about.html
@@ -5,6 +5,76 @@ and has been modified for purpose.-->
 
 <!DOCTYPE html>
 <head>
+
+<title>Saumya Jetley</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<style>
+.w3-sidebar a {font-family: "Times New Roman", cursive}
+body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Times New Roman", cursive}
+
+/* unvisited link */
+a:link {
+    color: IndianRed;
+}
+/* visited link */
+a:visited {
+    color: IndianRed;
+}
+/* mouse over link */
+a:hover {
+    color: IndianRed;
+}
+/* selected link */
+a:active {
+    color: Indianred;
+}
+
+
+a.sidemenu {
+    color: black;
+}
+
+a.sidemenu:hover {
+    color: IndianRed;
+}
+
+a.sidemenu.onView {
+    color: Indianred;
+}
+
+</style>
+
 </head>
+
 <body>
+
+<!-- !PAGE CONTENT! -->
+<div class="w3-main" style="margin-left:150px">
+  
+  <header class="w3-container w3-xlarge">
+    <div id="hobbies" class="sidemenu-link"></div>
+    <hr style="width:800px">
+    <h2 style="font-size:90%; font-family:Times New Roman;" align="justify"><strong> Updates </strong></h2>
+    <p style="font-size:67%; font-family:Times New Roman;">
+    09/18: Our paper explaining adversarial vulnerability in deep neural nets is accepted at NIPS'18.<br />
+    08/18: I am co-organising the 'Frontiers of Computer Vision' track at the Indaba'18.<br />
+    06/18: I will be the outreach officer with OxWoCS for the academic year 2018-19. Our relationship history here.<br />
+    05/18: I am co-organising a coding workshop at the Hay Science Festival. More details here.<br />
+    05/18: I am presenting my work at ICLR'18. Some highlights here.<br />
+    04/18: Grateful to be receiving <a href=https://www.stx.ox.ac.uk/about-st-cross>St. Cross</a> travel and research scholarship.<br />
+    03/18: Grateful to be receiving the ICLR'18 travel award.<br />
+    01/18: Our paper on learning attention in classification CNNs is accepted at ICLR'18. <br/>
+    <br/>
+    <a href='./website.html'>Back to main</a>
+    </p>
+  </header>
+  
+</div>
+
 </body>
