project text needs to be populated

--- a/website.html
+++ b/website.html
@@ -150,30 +150,51 @@ a.sidemenu.onView {
     <hr style="width:800px">
     <h2 style="font-size:90%; font-family:Times New Roman;" align="justify"><strong> Research Projects </strong></h2>
     <br />
-    <iframe width="300" height="220" align="left"  src="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin-right:25px"></iframe>
-    <h3 style="font-size:85%; font-family:Times New Roman;" align="justify">Straight to Shapes</h3>
+    <img src="./projects/traces-1.png" width="450" height="220" align="left"  style="margin-right:30px">
+    <h3 style="font-size:85%; font-family:Times New Roman;" align="center">Explaining Adversariality in Deep Nets</h3>
+    <p style="font-size:65%; font-family:Times New Roman;" align="justify"> 
+I want to be able to write the text alongside the videos/images. What happens if I keep writing the text till it hits the newline?
+    </p>
+  </header>
+
+  <header class="w3-container w3-xlarge">
+  <br /><br />
+    <img src="./projects/multi_level_attention-1.png" width="450" height="230" align="left" style="margin-right:30px">
+    <h3 style="font-size:85%; font-family:Times New Roman;" align="center">Learning to Pay Attention</h3>
+    <p style="font-size:65%; font-family:Times New Roman;" align="justify"> 
+We propose an end-to-end-trainable attention module for convolutional neural network (CNN) architectures built for image classification. Our experimental observations provide clear evidence to this effect that the learned attention scores amplify the relevant and suppress the irrelevant or misleading. The proposed function is able to bootstrap standard CNN architectures for the task of image classification and demonstrate superior generalisation.
+    </p>
+  </header>
+
+  <header class="w3-container w3-xlarge">
+    <br /><br />
+    <iframe width="450" height="250" align="left"  src="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin-right:25px">
+    </iframe>
+    <h3 style="font-size:85%; font-family:Times New Roman;" align="center">Realtime Instance Segmentation</h3>
     <p style="font-size:65%; font-family:Times New Roman;" align="justify"> 
 I want to be able to write the text alongside the videos/images. What happens if I keep writing the text till it hits the newline?
     </p>
   <br />
   </header>
-
-  <header class="w3-container w3-xlarge">
-    <br /t >
-    <iframe width="300" height="220" align="left"  src="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin-right:25px"></iframe>
-    <h3 style="font-size:85%; font-family:Times New Roman;" align="justify">Straight to Shapes</h3>
+  
+    <header class="w3-container w3-xlarge">
+    <br /><br />
+    <img src="./projects/saliency-estimation.png" width="450" height="280" align="left" style="margin-right:30px">
+    </iframe>
+    <h3 style="font-size:85%; font-family:Times New Roman;" align="center">Human Saliency Estimation</h3>
     <p style="font-size:65%; font-family:Times New Roman;" align="justify"> 
 I want to be able to write the text alongside the videos/images. What happens if I keep writing the text till it hits the newline?
     </p>
   <br />
   </header>
-
-  <header class="w3-container w3-xlarge">
-    <br />
-    <iframe width="300" height="220" align="left"  src="https://www.youtube.com/embed/zWZowrpaZ1c?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen style="margin-right:25px"></iframe><br />
-    <h3 style="font-size:85%; font-family:Times New Roman;" align="justify">Straight to Shapes</h3>
+  
+    <header class="w3-container w3-xlarge">
+    <br /><br />
+    <img src="./projects/prototypical_priors-1.png" width="450" height="220" align="left" style="margin-right:30px">
+    </iframe>
+    <h3 style="font-size:85%; font-family:Times New Roman;" align="center">Leveraging Prototypical Priors</h3>
     <p style="font-size:65%; font-family:Times New Roman;" align="justify"> 
-I want to be able to write the text alongside the videos/images. What happens if I keep writing the text till it hits the newline?
+    I want to be able to write the text alongside the videos/images. What happens if I keep writing the text till it hits the newline?
     </p>
   <br />
   </header>
