--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ and has been modified for purpose.-->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/home/mikesapi/documents/oxweb/website.js"></script>
+<script src="./website.js"></script>
 
 
 <style>
