changes for server

--- a/project_pages/ltpa.html
+++ b/project_pages/ltpa.html
@@ -79,7 +79,7 @@ a.sidemenu.onView {
     2017:18 - External Relations Coordinator / Industry Event Coordinator - It was my third-year as a DPhil student working on Artificial intelligence for robotic vision. As the external relations coordinator, I liaised with different societies/groups especially in STEM subjects to maximize collaboration and reach via increased cross-talk, joint organization of events, etc. As the Industry event coordinator, I was instrumental in organizing social and formal events to promote and facilitate interaction between students and industry.
     <br /></p>
 
-    <a href='../website.html'>Back to main</a>
+    <a href='../index.html'>Back to main</a>
   </header>
   
 </div>
