hobbies changed to updates

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ a.sidemenu.onView {
     <br />
     <h4>
     <a id="about-side" class="sidemenu" href="#about" style="text-decoration:none" onclick="makeOnView()"><strong>Home</strong></a><br />
-    <a id="hobbies-side" class="sidemenu" href="#hobbies" style="text-decoration:none" onclick="makeOnView()"><strong>Updates</strong></a><br />
+    <a id="updates-side" class="sidemenu" href="#updates" style="text-decoration:none" onclick="makeOnView()"><strong>Updates</strong></a><br />
     <a id="projects-side" class="sidemenu" href="#projects" id="Bprojects" style="text-decoration:none" onclick="myAccFunc()"><strong>Research Projects</strong></a><br />
     <!-- <i class="fa fa-caret-down"></i>
       <div id="demoAcc" class="w3-bar-block w3-hide w3-padding-large w3-medium">
@@ -124,7 +124,7 @@ a.sidemenu.onView {
   </header>
 
   <header class="w3-container w3-xlarge">
-    <div id="hobbies" class="sidemenu-link"></div>
+    <div id="updates" class="sidemenu-link"></div>
     <hr style="width:800px">
     <h2 style="font-size:90%; font-family:Times New Roman;" align="justify"><strong> Updates </strong></h2>
     <p style="font-size:67%; font-family:Times New Roman;">
