--- a/index.html
+++ b/index.html
@@ -61,46 +61,43 @@ a.sidemenu.onView {
 
 </style>
 </head>
-<body class="w3-content" style="max-width:900px">
+<body class="w3-content" style="max-width:1000px">
 
 <!-- Sidebar/menu -->
 <!--<nav class="w3-bar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:235px;margin-left:-100px" id="mySidebar">-->
-<div class="navbar w3-bar w3-white">
-  <div class="w3-container w3-display-container w3-padding-16">
-    <img src="gitim.jpeg" style="width:10%">
-<!-- Insert a Table here (SJ) -->
-    <b>Saumya Jetley</b>
-    <i>DPhil Student <br /> University of Oxford</i><br /><i>Email:<a href="mailto:sjetley@robots.ox.ac.uk"> sjetley@robots.ox.ac.uk</i></a>
-    <!-- class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold"> -->
-    <br />
-    <br />
+<div class="navbar w3-bar w3-white" style="max-width:1000px">
+  <!--<div class="w3-container w3-display-container w3-padding-16">-->
+    <h5><b>Saumya Jetley</b><br />
+    <i>DPhil Student, University of Oxford</i><br /><i>Email:<a href="mailto:sjetley@robots.ox.ac.uk"> sjetley@robots.ox.ac.uk</i></a>
+    <span style="float:right;">
+    <a><i class="fa fa-twitter w3-hover-opacity" id="twitter"></i></a>&ensp;&ensp;
+    <a><i class="fa fa-linkedin w3-hover-opacity" id="linkedin"></i></a>&ensp;&ensp;
+    <a><i class="fa fa-github w3-hover-opacity" id="linkedin"></i></a>&ensp;&ensp;
+    </span>
+    </h5>
+    
     <h4>
+    <hr style="width:800px">
 <!-- arrange them horizontally but with gaps (SJ) -->
-    <a id="about-side" class="sidemenu" href="#about" style="text-decoration:none" onclick="makeOnView()"><strong>Home</strong></a>
-    <a id="updates-side" class="sidemenu" href="#updates" style="text-decoration:none" onclick="makeOnView()"><strong>Updates</strong></a>
-    <a id="projects-side" class="sidemenu" href="#projects" id="Bprojects" style="text-decoration:none" onclick="myAccFunc()"><strong>Research Projects</strong></a>
+    <a id="about-side" class="sidemenu" href="#about" style="text-decoration:none" onclick="makeOnView()"><strong>Home</strong></a>&emsp;&emsp;
+    <a id="updates-side" class="sidemenu" href="#updates" style="text-decoration:none" onclick="makeOnView()"><strong>Updates</strong></a>&emsp;&emsp;
+    <a id="projects-side" class="sidemenu" href="#projects" id="Bprojects" style="text-decoration:none" onclick="myAccFunc()"><strong>Research Projects</strong></a>&emsp;&emsp;
     <!-- <i class="fa fa-caret-down"></i>
       <div id="demoAcc" class="w3-bar-block w3-hide w3-padding-large w3-medium">
       <a href="#projects" class="w3-bar-item w3-button">Straight to Shapes</a>
       <a href="#projects" class="w3-bar-item w3-button">Straight to Shapes++</a>
       </div>-->
-    <a id="data-side" class="sidemenu" href="#data" style="text-decoration:none" onclick="makeOnView()"><strong>Datasets</strong></a>
+    <a id="data-side" class="sidemenu" href="#data" style="text-decoration:none" onclick="makeOnView()"><strong>Datasets</strong></a>&emsp;&emsp;
     <a id="publ-side" class="sidemenu" href="#publ" style="text-decoration:none" onclick="makeOnView()"><strong>Publications</strong></a>
-
-    </h4>
-    <br />
-    <h3>
-    <a><i class="fa fa-twitter w3-hover-opacity" id="twitter"></i></a>&ensp;
-    <a><i class="fa fa-linkedin w3-hover-opacity" id="linkedin"></i></a>&ensp;
-    <a><i class="fa fa-github w3-hover-opacity" id="linkedin"></i></a>&ensp;
-    </h3>
-  </div>
+   <hr style="width:800px">
+   </h4>
 </div>
+<!--</div>-->
 <!-- </nav>-->
 
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-top:300px">
+<div class="w3-main" style="margin-top:210px">
 
   <!-- Push down content on small screens -->
   <div class="w3-hide-large" style="margin-top:83px"></div>
@@ -110,7 +107,8 @@ a.sidemenu.onView {
 
   <!-- Image header -->
   <Header class="w3-container w3-xlarge sidemenu-link" id="about">
-    <h1 style="font-size:75%; font-family:Times New Roman;" align="center"><strong> 
+    <h1 style="font-size:75%; font-family:Times New Roman;" align="center"><strong>
+    <img src="gitim.jpeg" style="width:20%"><br/>
     <br/>I am a final year PhD student under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Prof. Philip Torr</a> 
     <br/>generously funded by the <a href=https://epsrc.ukri.org/skills/students/ style="text-decoration:none">EPSRC research scholarship</a> to pursue
     <br/>research in 'AI for scene understanding' at the University of Oxford.
@@ -314,6 +312,10 @@ In this work, we propose to directly regress to objects' shapes in addition to t
       [<a href="https://ieeexplore.ieee.org/document/6460142/">pdf</a>]
       <br/><br/>
       </a>
+      <br/><br/>
+      <br/><br/>
+      <br/><br/>
+      <br/><br/>
     </div>
    
   
