added links for social media profiles

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Times New Roman", cursive}
 
 .sidemenu-link{
   display: block;
-  height: 210px; /*same height as header*/
-  margin-top: -210px; /*same height as header*/
+  height: 300px; /*same height as header*/
+  margin-top: -300px; /*same height as header*/
   visibility: hidden;
 }
 
@@ -76,9 +76,9 @@ a.sidemenu.onView {
     <h5><b>Saumya Jetley</b><br />
     <i>DPhil Student, University of Oxford</i><br /><i>Email:<a href="mailto:sjetley@robots.ox.ac.uk"> sjetley@robots.ox.ac.uk</i></a>
     <span style="float:right;">
-    <a><i class="fa fa-twitter w3-hover-opacity" id="twitter"></i></a>&ensp;&ensp;
-    <a><i class="fa fa-linkedin w3-hover-opacity" id="linkedin"></i></a>&ensp;&ensp;
-    <a><i class="fa fa-github w3-hover-opacity" id="linkedin"></i></a>&ensp;&ensp;
+    <a href="https://twitter.com/saumyajetley"><i class="fa fa-twitter w3-hover-opacity" id="twitter"></i></a>&ensp;&ensp;
+    <a href="https://www.linkedin.com/in/saumya-jetley-974aa69b/"><i class="fa fa-linkedin w3-hover-opacity" id="linkedin"></i></a>&ensp;&ensp;
+    <a href="https://github.com/saumya-jetley"><i class="fa fa-github w3-hover-opacity" id="github"></i></a>&ensp;&ensp;
     </span>
     </h5>
     
