updated the older news

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ a.sidemenu.onView {
       <a href="#projects" class="w3-bar-item w3-button">Straight to Shapes++</a>
       </div>-->
     <a id="data-side" class="sidemenu" href="#data" style="text-decoration:none" onclick="makeOnView()"><strong>Datasets</strong></a>&emsp;&emsp;
+    <a id="teach-side" class="sidemenu" href="#teach" style="text-decoration:none" onclick="makeOnView()"><strong>Teaching</strong></a>&emsp;&emsp;
     <a id="publ-side" class="sidemenu" href="#publ" style="text-decoration:none" onclick="makeOnView()"><strong>Publications</strong></a>
    <hr style="width:800px">
    </h4>
@@ -236,6 +237,19 @@ In this work, we propose to directly regress to objects' shapes in addition to t
       </p>
    </header>
    
+     <span class="sidemenu-link" id="teach" ></span>
+  <header class="w3-container w3-xlarge">
+      <hr style="width:800px">
+      <h2 style="font-size:90%; font-family:Times New Roman;" align="justify"><strong> Teaching </strong></h2>
+      <p style="font-size:70%; font-family:Times New Roman;">
+      <ul>
+      <li><il>
+      <li><il>
+      <li><il>
+      <li><il>
+      </ul>
+      </p>
+   </header>
    
 
  <span class="sidemenu-link" id="publ" ></span>
