datasets, need to add text for the teaching work undertaken till date

--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@ In this work, we propose to directly regress to objects' shapes in addition to t
       <h2 style="font-size:90%; font-family:Times New Roman;" align="justify"><strong> Datasets </strong></h2>
       <p style="font-size:70%; font-family:Times New Roman;">
       Long long time ago, I gathered a dataset of 'Country Flags in the Wild'. It comprises of
-      --- train images and -- test images of the flags of -- countries obtained from the images on world wide web and cropped manually to 
-      loosely fit to the flag. More details can be found in the paper. <br/>
-      It can downloaded from here by submitting this copyright form to my email address and receiving the passkey.
+      12,854 train images and 6,110 test images of the flags of 224 countries obtained from the images on world wide web and cropped manually to 
+      loosely fit to the flag. More details can be found in the <a href="https://ieeexplore.ieee.org/abstract/document/6707635">paper</a>. 
+      It can downloaded from <a href="/data/tvg/sjetley/">here</a> by submitting this copyright form to my email address and receiving the passkey.
       </p>
    </header>
    
